--- a/cadastro.html
+++ b/cadastro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Cadastro</title>
+    <title> Cadastro </title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -11,8 +11,15 @@
     
 </head>
 <body>
+    <div class="container">
+        <label for="">Nome:</label>
+        <input type="text" id="nomeUser" class="form-control"><br>
+        <button class="btn btn-warning">SALVAR</button>
 
-    
+
+    </div>
+
+
     <script src='main.js'></script>
 </body>
 </html>
