Adicionamos uma tabela com Nome Usuário e Ações

--- a/cadastro.html
+++ b/cadastro.html
@@ -15,9 +15,19 @@
         <label for="">Nome:</label>
         <input type="text" id="nomeUser" class="form-control"><br>
         <button class="btn btn-warning">SALVAR</button>
+    </div>
+<br>
+    <div class="container">
+        <table class="table table-striped" id="tabela">
+            <tr>
+                <th> Nome Usuário </th>
+                <th> Ações </th>
+            </tr>
 
+        </table>
 
     </div>
+
 
 
     <script src='main.js'></script>
