Foi adicionado o campo email no arquivo do projeto

--- a/cadastro.html
+++ b/cadastro.html
@@ -14,6 +14,11 @@
     <div class="container">
         <label for="">Nome:</label>
         <input type="text" id="nomeUser" class="form-control"><br>
+    </div>
+
+    <div class="container">
+        <label for="">Email:</label>
+        <input type="text" id="nomeUser" class="form-control"><br>
         <button type="button"  onclick = "salvarUser()" class="btn btn-primary">SALVAR</button>
     </div>
  
